# Trading-WSL

./: .coverage  .coverage-baseline  .coveragerc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  ISSUE.md  LICENSE  Makefile  README - other notes.md  README.md  REPORT.md  Run Coverage and Report  coverage.json  coverage.xml  coverage_analysis.json  nohup.out  package-lock.json  package.json  preferred_connection.txt  promotion.rule.json  pyproject.toml  pyrightconfig.json  requirements.txt  root_cleanup_move_plan.csv  setup.sh  start_gateway.sh  sync_essential_to_windows.sh  sync_to_windows.sh  test_README.md  tmp_check_cfg.py  warrior_discovery_debug.json  warrior_task_debug.json  warrior_task_summary.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-instructions.md  cross-smoke-trading.yml  nightly-tools-describe.yml  nightly_backfill.yml  open-tech-debt-issue.yml  project-note-tech-debt.yml  type-check.yml  validate-tf1-manifest.yml
.tasks/: log.md  migrate_requestCheckerCLS_plan.md  requestCheckerCLS_usage.json  script_plan_src_MasterPy_Trading.py.md  script_tasks_src_MasterPy_Trading.py.md
Level2/MSFT/: 2025-09-04_snapshots_databento.parquet
archive/documentation/: README_CONSOLIDATION_LOG.md  README_MODERN.md  README_NEW.md  README_OLD.md  README_UPDATE.md
archive/obsolete_files/: Test_x.py  WhatsApp.py  example_Tkinter.py  verify_setup.py
artifacts/: coordinator_snapshot.json  manifest.json
config/: config.json  ib_gateway_config.json  symbol_mapping.json
data/: .gitkeep  WarriorTrading_Trades.csv
docs/: ARCHITECTURE.md  ENVIRONMENT.md  MIGRATION_MASTERPY_TRADING.md  TF_1_ALIGNMENT.md  TODO 2.md  migration_environment_variables_complete.md  migration_paths_log.md
examples/: README.md  tf1_export_manifest.no_alias.sample.json
logs/: .gitkeep  e2e_single_MSFT_2025-09-04.json  e2e_single_PSTV_2019-08-16.json
reports/: architecture_audit.md  cleanup_masterpy_trading.md  cleanup_masterpy_trading_usages.json  cleanup_warrior.md  cleanup_warrior_usages.json  coverage_analysis.json  env_keys.json  env_migration_report.md  env_scan.json  file_metrics.json  ib_connection_refactoring_audit.md  import_graph.json  precommit_task_log.md  retire_barcls_decision.md  retire_barcls_usages.json  script_manifest.json  scripts_groups.json  scripts_inventory.json  scripts_move_plan.csv  unused_code_report.md  update_data_usages.json  usage_map_backfill.json  warrior_backfill_usage_map.json
scripts/: apply_branch_protection.sh  branch_protection_main.json  detect_sync_leftovers.py  estab_watch.sh  find_unused_code.py  generate_tool_manifest.py  get_ib_plan.py  ib_eclient_probe.py  ib_probe.py  launcher_watch.sh  make_l2_fixture.py  notify_tbs.sh  pytest_progress.py
src/: Ib_Manual_Attempt.py  MasterPy.py  MasterPy_Trading.py  MasterPy_Trading.py.backup  __init__.py  api.py  ib_Main.py  ib_Trader.py  ib_Warror_dl.py  migration_helper.py  notifications.py
src/analytics/: __init__.py  evaluation.py  financial_metrics.py
src/automation/: headless_gateway.py
src/config/: extensions.py
src/core/: __init__.py  config.py  connection_pool.py  dataframe_safety.py  error_handler.py  integrated_error_handling.py  modern_trading_core.py  performance.py  retry_manager.py
src/data/: __init__.py  __init__.py.backup  data_manager.py  pandas_helpers.py  parquet_repository.py
src/domain/: __init__.py  interfaces.py  ml_types.py  ports.py
src/execution/: __init__.py  ml_signal_executor.py
src/infra/: __init__.py  _ib_availability.py  async_utils.py  async_utils_legacy.py  contract_factories.py  ib_client.py  ib_conn.py  ib_requests.py  service_registry.py
src/integrations/: ml_data_integrity.py  wandb_integration.py
src/lib/: __init__.py  ib_async_wrapper.py  ib_insync_compat.py
src/monitoring/: __init__.py  ml_performance_monitor.py
src/observability/: metrics.py
src/persistence/: __init__.py  state_store.py
src/recording/: __init__.py  l2_slot_manager.py  session_manager.py
src/risk/: __init__.py  ml_risk_manager.py
src/scanner/: __init__.py  etf_blacklist.py  gap_rvol_scanner.py  ib_market_scanner.py
src/services/: __init__.py  bar_configuration_service.py  contract_manager_service.py  data_management_service.py  data_persistence_service.py  historical_data_service.py  market_calendar_service.py  market_data_service.py  market_info_service.py  ml_order_management_service.py  order_management_service.py  path_service.py  position_service.py  request_manager_service.py  service_manager.py  stock_split_detection_service.py  symbol_mapping.py
src/tools/: __init__.py  _cli_helpers.py  analyze_depth.py  auto_backfill_from_warrior.py  backfill_l2_from_warrior.py  migration_guide.py  (+13 more)
stubs/: ib_async.pyi  ibapi.pyi
test_environment/: test_config.yaml
tests/: conftest.py  simple_gateway_test.py  test__ib_availability.py  test_api_surface.py  test_async_utils.py  test_config.py  test_config_editor_services.py  test_connection_pool.py  test_data_helpers.py  test_data_manager.py  test_data_manager_download_tracker_edges.py  test_dataframe_safety.py  test_dataframe_safety_extras.py  test_describe_schema.py  test_error_handler.py  test_export_manifest_validator.py  test_financial_metrics.py  test_ib_async_stubs.py  test_ib_availability.py  test_ib_compat_errors.py  test_ib_conn.py  test_ib_connect.py  test_ib_plan_policy.py  test_infra_smoke.py  test_integrated_error_handling.py  test_integrated_error_handling_extended.py  test_l2_fixture_schema.py  test_lazy_import_req_hist.py  test_masterpy_trading_interval.py  test_ml_imports.py  test_ml_infrastructure_priorities.py  test_ml_performance_monitor_suite.py  test_ml_risk_manager.py  test_ml_signal_executor.py  test_ml_signal_executor_monitoring.py  test_ml_signal_executor_more.py  test_ml_signal_executor_unit.py  test_more_coverage_unit.py  test_no_legacy_imports.py  test_observability_and_dst.py  (+7 more)
tools/: run_pyright.sh  validate_env.py
trading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+108 files in other folders)
